--- a/Version2/index.css
+++ b/Version2/index.css
@@ -92,12 +92,20 @@ nav{
 }
 /* -----------------------------------------------SectionTwo-------------------------------------------------- */
 .section-two{
-    padding: 5rem;
+    padding: 3rem;
     width: 100%;
     background-color: red;
 }
+.section-two-in{
+    padding: 3rem;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+}
+
+  
 /* ------------------------------------------------SectionThree---------------------------------------------- */
-.section-three{
+/* .section-three{
     padding: 4rem 0rem ;
     width: 100%;
     /* background-color:red; */
@@ -114,7 +122,7 @@ nav{
     width: 95%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center;
     gap:2rem;
 }
 .box{
@@ -126,4 +134,4 @@ nav{
     border-radius: 10px;
     /* background-color: red; */
     margin-top:4rem;
-}
+} */ */
