--- a/Client/index.css
+++ b/Client/index.css
@@ -2,10 +2,6 @@
 *{
     box-sizing: border-box;
 }
-html{
-    background-color: #21D4FD;
-background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-}
 body{
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 background:transparent;
@@ -15,6 +11,7 @@ width: 100%;
 display: flex;
 justify-content: center;
 align-content:center;
+background-color: black;
 }
 .container{
     /* padding: 10rem; */
@@ -30,8 +27,14 @@ align-content:center;
 .container , h1,h2{
 text-align: center;
 }
-.container> h1{
- color:#887fff;
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+}
+.container h1{
+ color:grey;
     }
     .container> h2{
         color:#fff;
