--- a/Client/index.css
+++ b/Client/index.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Merriweather';
+    font-family: 'poppins';
 }
 body{
     width: 100%;
@@ -55,9 +56,32 @@ nav{
 }
 .home-container-main{
     padding: 10rem;
-    background-color: red;
+    /* background-color: red; */
     display: flex;
     flex-direction: column;
+    justify-content: center ;
+    align-content: center;
+    text-align: center;
+}
+.home-container-main h2{
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.home-container-main h3{
+    font-size: 1.6rem;
+    font-weight: 300;
+}
+.home-section-two{
+    width: 100%;
+    display: flex;
     justify-content: center;
+    align-content: center;
+}
+.home-section-two-in{
+    padding: 2rem;
+    background-color: red;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
     align-content: center;
 }
